--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <main>
         <section id="formularios" class="form-links" aria-label="Formularios disponibles">
           <h2>Selecciona una pestaña</h2>
-          <p>Los enlaces pueden apuntar a los futuros formularios oficiales cuando estén publicados.</p>
+          <p>Accesos directos a los formularios oficiales publicados.</p>
 
           <div class="form-links__grid">
             <a
