Actualizar textos y agregar footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <h1>Menú de formularios de almacén</h1>
           <p>
             Accesos directos para que el equipo registre los movimientos y la producción diaria sin distracciones.
-            Los formularios ya están listos: solo falta desplegar este menú en GitHub y luego publicarlo en Vercel.
           </p>
         </div>
       </header>
@@ -29,7 +28,7 @@
       <main>
         <section id="formularios" class="form-links" aria-label="Formularios disponibles">
           <h2>Selecciona una pestaña</h2>
-          <p>Accesos directos a los formularios oficiales publicados.</p>
+          <p>Enlaces a formularios rápidos.</p>
 
           <div class="form-links__grid">
             <a
@@ -55,6 +54,10 @@
           </div>
         </section>
       </main>
+
+      <footer class="page-footer" aria-label="Créditos">
+        <p>Elaborado por el pasante de producción Gerardo Siblesz</p>
+      </footer>
     </div>
   </body>
 </html>
